fix: Footer Message was not centered.

--- a/root_page_style.css
+++ b/root_page_style.css
@@ -6,6 +6,5 @@ footer {
 }
 
 #footer-message {
-    width: 50%;
-    margin: 0 auto;
+    text-align: center;
 }
